--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
+    "dns": "^0.2.2",
     "express": "^4.19.2",
     "mongoose": "^8.3.5",
     "nodemon": "^3.1.0"
@@ -8,7 +9,6 @@
   "name": "nextback",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon index.js",
     "dev": "nodemon --ext *"
