--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dns": "^0.2.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.5",
     "nodemon": "^3.1.0"
